# Benchmark-GPU

./: .gitignore  CMakeLists.txt  LICENSE  Matrix.h  generate_chart_Jacobi.py  generate_chart_MapReduce.py  generate_chart_MonteCarlo.py  generate_chart_PDE.py  generate_charts.py  runBenchmark.bat  runBenchmark.sh
CPU/: CMakeLists.txt  cpu.cpp
CUDA/: CMakeLists.txt  ConjugateGradient.cu  FiniteDifferenceMethodsforPDEs.cu  Jacobi.cu  JacobiGauss.cu  MapReduce.cu  MonteCarlo.cu  PageRank.cu  cuda.cu
OpenACC/: CMakeLists.txt  FiniteDifferenceMethodsforPDEs.cpp  Jacobi.cpp  MapReduce.cpp  MonteCarlo.cpp  PageRank.cpp
OpenCL/: CMakeLists.txt  ConjugateGradient.cpp  DeviceInfo.cpp  FiniteDifferenceMethodsforPDEs.cpp  Jacobi.cpp  JacobiGauss.cpp  MapReduce.cpp  MonteCarlo.cpp  PageRank.cpp  opencl.cpp
OpenCL/HeiderBalance/: CMakeLists.txt  OpenCLRun.cl  main.cpp
OpenMP/: CMakeLists.txt  ConjugateGradient.cpp  FiniteDifferenceMethodsforPDEs.cpp  Jacobi.cpp  JacobiGauss.cpp  MapReduce.cpp  MonteCarlo.cpp  PageRank.cpp  openmp.cpp
Sycl/: CMakeLists.txt  ConjugateGradient.cpp  FiniteDifferenceMethodsforPDEs.cpp  Jacobi.cpp  MapReduce.cpp  MonteCarlo.cpp  PageRank.cpp  sycl.cpp
